Adding base module, refactoring a lot, adding webhook modules classes